--- a/Sesi3/index.html
+++ b/Sesi3/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css"
+      integrity="sha512-HHsOC+h3najWR7OKiGZtfhFIEzg5VRIPde0kB0bG2QRidTQqf+sbfcxCTB16AcFB93xMjnBIKE29/MjdzXE+qw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Web Buah-Buahan</title>
   </head>
   <body>
@@ -26,8 +33,54 @@
               <a href="">Contact</a>
             </li>
           </ul>
-          <button>CART</button>
+          <button><i class="fa-solid fa-cart-shopping"></i></button>
         </div>
+      </div>
+    </section>
+
+    <!-- content -->
+    <section>
+      <div id="image">
+        <h1 class="text-heading">buah dan sayur segar, sehat, kualitas oke punya.</h1>
+        <h3 class="text-heading">sangat cocok untuk pola hidup sehat dan hemat.</h3>
+        <img src="assets/images/image.jpg" alt="Fruits" />
+      </div>
+
+      <div>
+        <h3 class="text-content">
+          Kami menyediakan buah dan sayur yang segar dan langsung memetiknya dari perkebunan, loh! Yang mau cobain,<br />
+          yuk langsung aja order!
+        </h3>
+      </div>
+
+      <div class="card">
+        <div>
+          <a href="" class="card-content">
+            <div>
+              <img src="assets/images/fruit.jpg" alt="fruits" />
+              <p>fruits</p>
+            </div>
+          </a>
+          <a href="" class="card-content">
+            <div>
+              <img src="assets/images/vegetable.jpg" alt="vegetable" />
+              <p>vegetable</p>
+            </div>
+          </a>
+          <a href="" class="card-content">
+            <div>
+              <img src="assets/images/spice.jpg" alt="spice" />
+              <p>spice</p>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <section class="mBottom">
+      <div>
+        <p class="footer">&copy; Nofra Website 2022</p>
       </div>
     </section>
   </body>
