--- a/Sesi3/index.html
+++ b/Sesi3/index.html
@@ -24,13 +24,13 @@
         <div class="list-navbar">
           <ul>
             <li>
-              <a href="">About</a>
+              <a href="#image">About</a>
             </li>
             <li>
-              <a href="">Products</a>
+              <a href="#card">Products</a>
             </li>
             <li>
-              <a href="">Contact</a>
+              <a href="https://wa.me/+628123456789">Contact</a>
             </li>
           </ul>
           <button><i class="fa-solid fa-cart-shopping"></i></button>
@@ -53,7 +53,7 @@
         </h3>
       </div>
 
-      <div class="card">
+      <div id="card" class="card">
         <div>
           <a href="" class="card-content">
             <div>
